Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/reports/lab/test_count.xhtml
+++ b/src/main/webapp/reports/lab/test_count.xhtml
@@ -5,18 +5,13 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
     <h:body>
         <ui:composition template="/reports/index.xhtml">
             <ui:define name="subcontent">
-
                 <h:form >
-
-
-
                     <p:panel header="Test Counts" >
                         <h:panelGrid columns="5" >
-                            <p:outputLabel value="Institution/Branch" >
+                            <p:outputLabel value="Billing Institution/Branch" >
                             </p:outputLabel>
                             <p:selectOneMenu 
                                 id="cmdFromInstitution"
@@ -30,11 +25,8 @@
                                                itemValue="#{i}" ></f:selectItems>
                                 <p:ajax process="cmdFromInstitution" update="cmdFromDepartment" ></p:ajax>
                             </p:selectOneMenu>
-
-
-                            <p:spacer></p:spacer>
-
-                            <p:outputLabel value="Department" >
+                            <p:spacer width="40" height="1"></p:spacer>
+                            <p:outputLabel value="Billing Department" >
                             </p:outputLabel>
                             <p:selectOneMenu 
                                 id="cmdFromDepartment"
@@ -48,7 +40,7 @@
                             </p:selectOneMenu>
 
 
-                            <p:outputLabel value="To Department / Lab" >
+                            <p:outputLabel value="Peformed Department / Lab" >
                             </p:outputLabel>
                             <p:selectOneMenu value="#{reportController.toInstitution}" filter="true" >
                                 <f:selectItem itemLabel="All" ></f:selectItem>
@@ -57,8 +49,8 @@
                                                itemLabel="#{i.name}"
                                                itemValue="#{i}" ></f:selectItems>
                             </p:selectOneMenu>
-
-                            <p:outputLabel value="From (Billed)" >
+                            <p:spacer></p:spacer>
+                            <p:outputLabel value="Analyzer" >
                             </p:outputLabel>
                             <p:selectOneMenu value="#{reportController.machine}" filter="true" >
                                 <f:selectItem itemLabel="All" ></f:selectItem>
@@ -69,12 +61,13 @@
                             </p:selectOneMenu>
 
 
-                            <p:outputLabel value="From (Billed)" >
+
+                            <p:outputLabel value="Bill Date From" >
                             </p:outputLabel>
                             <p:datePicker value="#{reportController.fromDate}" 
                                           pattern="dd MMMM yyyy"></p:datePicker>
-                            <p:spacer width="20"></p:spacer>
-                            <p:outputLabel value="From (Billed)" >
+                            <p:spacer></p:spacer>
+                            <p:outputLabel value="Bill Date To" >
                             </p:outputLabel>
                             <p:datePicker value="#{reportController.toDate}"
                                           pattern="dd MMMM yyyy"></p:datePicker>
@@ -82,16 +75,34 @@
 
                             <p:commandButton ajax="false" value="Process" action="#{reportController.processLabTestCount()}" >
                             </p:commandButton>
+                            <p:commandButton ajax="false" value="Download"
+                                             action="#{reportController.downloadLabTestCount}">
+                            </p:commandButton>
+
                         </h:panelGrid>
 
 
-                        <!-- Newly created by Dr M H B Ariyaratne with assistance from ChatGPT from OpenAI. -->
 
-                        <p:dataTable value="#{reportController.reportList}" var="catReport">
+                        <!-- Modified by Dr M H B Ariyaratne with assistance from ChatGPT from OpenAI -->
+                        <p:dataTable 
+                            id="tbl"
+                            value="#{reportController.reportList}" 
+                            var="catReport"
+                            paginator="true"
+                            rows="10"
+                            rowKey="#{catReport.category}"
+                            >
                             <p:subTable var="item" value="#{catReport.items}">
-                                <f:facet name="header">
-                                    <h:outputText value="#{catReport.category}" />
-                                </f:facet>
+                                <p:columnGroup type="header">
+                                    <p:row>
+                                        <p:column style="font-weight: bold; background-color: #f1f1f1;" headerText="Total for #{catReport.category}" />
+                                        <p:column style="font-weight: bold; background-color: #f1f1f1;">
+                                            <f:facet name="header">
+                                                <h:outputText value="#{catReport.total}" />
+                                            </f:facet>
+                                        </p:column>
+                                    </p:row>
+                                </p:columnGroup>
 
                                 <p:column headerText="Test Name">
                                     <h:outputText value="#{item.testName}" />
@@ -100,13 +111,11 @@
                                 <p:column headerText="Test Count">
                                     <h:outputText value="#{item.testCount}" />
                                 </p:column>
-
-                                <f:facet name="footer">
-                                    <!-- Here you will add the total for the category -->
-                                    <h:outputText value="Total for #{catReport.category}: #{catReport.total}" />
-                                </f:facet>
                             </p:subTable>
                         </p:dataTable>
+
+
+
 
                     </p:panel>
 
