--- a/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
@@ -49,6 +49,7 @@
                             </p:tab>
                             <p:tab title="Sales Reports">
                                 <div class="d-grid gap-2">
+                                    <p:commandButton class="w-100" value="Sale Report" action="sale_report" ajax="false" ></p:commandButton> 
                                     <p:commandButton class="w-100" value="Prescreption Report" action="report_prescreption" ajax="false" ></p:commandButton> 
                                     <p:commandButton class="w-100" value="Institution Item Movement" action="pharmacy_report_institution_movement" ajax="false" ></p:commandButton> 
                                     <p:commandButton class="w-100" value="Fast Moving" action="pharmacy_report_department_fast_moving" ajax="false" ></p:commandButton>                            
