Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -111,6 +111,11 @@
                                             <p:commandButton styleClass="linkButton600600" ajax="false" value="6) Bill List" action="/reportCashierBillFeePayment/opd_search_user_bills.xhtml" rendered="false" />
                                         </div>
                                     </p:tab>
+                                    <p:tab title="9) OPD Services">
+                                        <div class="d-grid gap-2">
+                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="OPD Services Count" action="/reports/opd/service_count.xhtml" />
+                                        </div>
+                                    </p:tab>
 
 
                                     <!--                                </p:panelGrid>-->
