--- a/src/main/webapp/reports/opd/service_count.xhtml
+++ b/src/main/webapp/reports/opd/service_count.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
-        <ui:composition template="/reports/index.xhtml">
+        <ui:composition template="/reportCashier/report_cashier.xhtml">
             <ui:define name="subcontent">
                 <h:form >
                     <p:panel header="Test Counts" >
@@ -20,47 +20,16 @@
                                 >
                                 <f:selectItem itemLabel="All" ></f:selectItem>
                                 <f:selectItems value="#{institutionController.items}"
+                                               id="cmdFromDepartment"
                                                var="i"
                                                itemLabel="#{i.name}"
                                                itemValue="#{i}" ></f:selectItems>
                                 <p:ajax process="cmdFromInstitution" update="cmdFromDepartment" ></p:ajax>
                             </p:selectOneMenu>
+                            
                             <p:spacer width="40" height="1"></p:spacer>
-                            <p:outputLabel value="Billing Department" >
-                            </p:outputLabel>
-                            <p:selectOneMenu 
-                                id="cmdFromDepartment"
-                                value="#{reportController.fromDepartment}" 
-                                filter="true">
-                                <f:selectItem itemLabel="All" ></f:selectItem>
-                                <f:selectItems value="#{departmentController.getInsDepartments(reportController.fromInstitution)}"
-                                               var="d"
-                                               itemLabel="#{d.name}"
-                                               itemValue="#{d}" ></f:selectItems>
-                            </p:selectOneMenu>
-
-
-                            <p:outputLabel value="Peformed Institution" >
-                            </p:outputLabel>
-                            <p:selectOneMenu value="#{reportController.toInstitution}" filter="true" >
-                                <f:selectItem itemLabel="All" ></f:selectItem>
-                                <f:selectItems value="#{institutionController.items}"
-                                               var="i"
-                                               itemLabel="#{i.name}"
-                                               itemValue="#{i}" ></f:selectItems>
-                            </p:selectOneMenu>
-                            <p:spacer></p:spacer>
-                            <p:outputLabel value="Analyzer" >
-                            </p:outputLabel>
-                            <p:selectOneMenu value="#{reportController.machine}" filter="true" >
-                                <f:selectItem itemLabel="All" ></f:selectItem>
-                                <f:selectItems value="#{machineController.items}"
-                                               var="i"
-                                               itemLabel="#{i.name}"
-                                               itemValue="#{i}" ></f:selectItems>
-                            </p:selectOneMenu>
-
-
+                             <p:spacer width="40" height="1"></p:spacer>
+                              <p:spacer width="40" height="1"></p:spacer>
 
                             <p:outputLabel value="Bill Date From" >
                             </p:outputLabel>
@@ -82,7 +51,7 @@
                         </h:panelGrid>
 
 
-                        <p:dataTable id="tbl" value="#{reportController.reportList}" var="catReport"
+                        <p:dataTable id="tbl" value="#{opdBillController.category}" var="catReport"
                                      paginator="true"
                                      rows="10"
                                      
