Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
@@ -54,6 +54,7 @@
                                     <p:commandButton class="w-100" value="Fast Moving" action="pharmacy_report_department_fast_moving" ajax="false" ></p:commandButton>                            
                                     <p:commandButton class="w-100" value="Slow Moving" action="pharmacy_report_department_slow_moving" ajax="false" ></p:commandButton>                            
                                     <p:commandButton class="w-100" value="Non Moving" action="pharmacy_report_department_non_moving" ajax="false" ></p:commandButton>                            
+                                    <p:commandButton class="w-100" value="Sale Report" action="pharmacy_sale_report" ajax="false" ></p:commandButton>   
                                 </div>
                             </p:tab>
                             <p:tab title="Stock Taking Reports">
