--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -25,7 +25,7 @@
 
             </h:panelGroup>
             <h:panelGroup rendered="true" >
-                <p:menubar  styleClass="bg-light text-dark" >
+                <p:menubar   >
                     <p:menuitem  ajax="false"
                                  action="/home" 
                                  icon="pi pi-home"
