--- a/src/main/webapp/channel/channel_report_absent_patients.xhtml
+++ b/src/main/webapp/channel/channel_report_absent_patients.xhtml
@@ -15,7 +15,7 @@
             <h:form>
                 <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
                 <p:panel  header="Channel Bill List">
-                    <h:panelGrid columns="2" styleClass="noPrintButton"> 
+                    <p:panelGrid columns="2" styleClass="noPrintButton"> 
                         <h:outputLabel value="From Date"/>
                         <p:calendar id="frmDate" value="#{channelReportController.fromDate}" navigator="true"  pattern="dd MMMM yyyy HH:mm:ss" ></p:calendar>
 
@@ -24,11 +24,11 @@
                         
                         <h:outputLabel value="Consultant"/>
                         <au:completeConsultant value="#{channelReportController.staff}"/>
-                    </h:panelGrid>
-                    <h:panelGrid columns="4"> 
+                    </p:panelGrid>
+                    <h:panelGrid columns="4" class="my-2"> 
                         <p:commandButton ajax="false" id="btnRefresh" value="Process Created Date" action="#{channelReportController.createAbsentPatientTable}">
                         </p:commandButton>
-                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right;" >
+                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right; channel_report_absent_patients; margin-left: 10px; margin-right: 10px " >
                             <p:printer target="billFeeReport"  />
                         </p:commandButton>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
@@ -37,16 +37,16 @@
                     </h:panelGrid>
 
                 </p:panel>
-                <p:panel id="billFeeReport" styleClass="noBorder summeryBorder" header="Channel Bill List">
+                <p:panel id="billFeeReport"  header="Channel Bill List">
                     <f:facet name="header" >
                         <p:outputLabel value="Bill Summary" />
-                        <h:outputLabel value="From : " style=" white-space:pre-line;"/>
-                        <h:outputLabel  value="#{channelReportController.fromDate}" >
-                            <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                        <h:outputLabel class="ml-5" value="From : " style=" white-space:pre-line;"/>
+                        <h:outputLabel class="ml-2" value="#{channelReportController.fromDate}" >
+                            <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                         </h:outputLabel>                          
-                        <h:outputLabel value="&emsp;&emsp;To :"/>
-                        <h:outputLabel  value="#{channelReportController.toDate}" >
-                            <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                        <h:outputLabel class="ml-5" value="&emsp;&emsp;To :"/>
+                        <h:outputLabel class="ml-2" value="#{channelReportController.toDate}" >
+                            <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                         </h:outputLabel>
                     </f:facet>
 
