--- a/src/main/webapp/channel/channel_report_by_bill_class_by_user_by_payment_methord.xhtml
+++ b/src/main/webapp/channel/channel_report_by_bill_class_by_user_by_payment_methord.xhtml
@@ -17,7 +17,7 @@
             <h:form>
                 <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
                 <p:panel  header="All My Booking Details List(By Craeated Date)">
-                    <h:panelGrid columns="2" styleClass="noPrintButton"> 
+                    <p:panelGrid columns="4" styleClass="noPrintButton"> 
                         <h:outputLabel value="From Date"/>
                         <p:calendar id="frmDate" value="#{channelReportController.fromDate}" navigator="true"  pattern="dd MMMM yyyy HH:mm:ss" ></p:calendar>
 
@@ -38,14 +38,13 @@
                             <f:selectItem itemLabel="Please Select a Type"/>
                             <f:selectItems value="#{enumController.channelType}" var="t" itemLabel="#{t.label}" itemValue="#{t}" />    
                         </p:selectOneMenu>
-                    </h:panelGrid>
+                    </p:panelGrid>
 
-                    <h:panelGrid columns="4">
-                        <p:spacer width="70" height="1"/>
+                    <h:panelGrid columns="3" class="my-2">
                         <p:commandButton ajax="false" id="btnRefresh" value="Process" action="#{channelReportController.channelBillClassListByPaymentMethord}">
 
                         </p:commandButton>
-                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right;" >
+                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right; margin-right: 10px; margin-left: 10px" >
                             <p:printer target="billFeeReport"  />
                         </p:commandButton>
                         <p:commandButton actionListener="#{channelReportController.channelBillClassListByPaymentMethord()}" ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
@@ -53,7 +52,7 @@
                         </p:commandButton>
                     </h:panelGrid>
                 </p:panel>
-                <p:panel id="billFeeReport" styleClass="noBorder summeryBorder" >
+                <p:panel id="billFeeReport"  >
                     <p:panel id="reportPrint">
                         <p:dataTable value="#{channelReportController.billedBills}" var="b" id="tbl1" rowIndexVar="a" >
                             <f:facet name="header" >
@@ -63,12 +62,12 @@
                                 <br></br>
                                 <p:outputLabel value="Payment Methord : #{channelReportController.paymentMethod}" rendered="#{channelReportController.paymentMethod ne null}"/>
                                 <h:outputLabel value="From : " style=" white-space:pre-line;"/>
-                                <h:outputLabel  value="#{channelReportController.fromDate}" >
-                                    <f:convertDateTime pattern="yyyy MMM dd hh:mm:ss a"/>
+                                <h:outputLabel  class="ml-2" value="#{channelReportController.fromDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>                          
-                                <h:outputLabel value="&emsp;&emsp;To :"/>
-                                <h:outputLabel  value="#{channelReportController.toDate}" >
-                                    <f:convertDateTime pattern="yyyy MMM dd hh:mm:ss a"/>
+                                <h:outputLabel  class="ml-5" value="&emsp;&emsp;To :"/>
+                                <h:outputLabel  class="ml-2" value="#{channelReportController.toDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>
                             </f:facet>
                             <p:column>
@@ -79,7 +78,7 @@
                                     <p:outputLabel value="Appoinment Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.singleBillSession.sessionDate}" >
-                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy" ></f:convertDateTime>
+                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MMM yyyy" ></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column style="text-align: left;" >
@@ -87,7 +86,7 @@
                                     <p:outputLabel value="Crteated Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.createdAt}" >
-                                    <f:convertDateTime pattern="dd MM yyyy hh:mm:ss a"></f:convertDateTime>
+                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm:ss"></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column sortBy="#{b.insId}">
@@ -202,7 +201,7 @@
                                     <p:outputLabel value="Appoinment Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.singleBillSession.sessionDate}" >
-                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy" ></f:convertDateTime>
+                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MMM yyyy" ></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column style="text-align: left;" rendered="#{channelReportController.withDates}">
@@ -210,7 +209,7 @@
                                     <p:outputLabel value="Crteated Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.createdAt}" >
-                                    <f:convertDateTime pattern="dd MM yyyy hh:mm:ss a"></f:convertDateTime>
+                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm:ss"></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column>
@@ -325,7 +324,7 @@
                                     <p:outputLabel value="Appoinment Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.singleBillSession.sessionDate}" >
-                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy" ></f:convertDateTime>
+                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MMM yyyy" ></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column style="text-align: left;" rendered="#{channelReportController.withDates}">
@@ -333,7 +332,7 @@
                                     <p:outputLabel value="Crteated Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.createdAt}" >
-                                    <f:convertDateTime pattern="dd MM yyyy hh:mm:ss a"></f:convertDateTime>
+                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm:ss"></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column>
@@ -433,19 +432,18 @@
 
                         </p:dataTable>
                         <f:facet name="footer" >
-                            <h:outputLabel value="#{sessionController.loggedUser.webUserPerson.name}" style="float: right"/>
-                            <h:outputLabel value="Channel Hos. Total : &nbsp;" style="float: left"/>
-                            <h:outputLabel value="#{channelReportController.netTotal-channelReportController.netTotalDoc}" style="float: left">
+                            <h:outputLabel value="Channel Hos. Total : &nbsp;" />
+                            <h:outputLabel value="#{channelReportController.netTotal-channelReportController.netTotalDoc}" >
                                 <f:convertNumber pattern="#,###,##0.00" />
                             </h:outputLabel>
                             <br></br>
-                            <h:outputLabel value="Channel Doc. Total : &nbsp;" style="float: left"/>
-                            <h:outputLabel value="#{channelReportController.netTotalDoc}" style="float: left">
+                            <h:outputLabel value="Channel Doc. Total : &nbsp;" />
+                            <h:outputLabel value="#{channelReportController.netTotalDoc}" >
                                 <f:convertNumber pattern="#,###,##0.00" />
                             </h:outputLabel>
                             <br></br>
-                            <h:outputLabel value="Channel Net Total : &nbsp;" style="float: left"/>
-                            <h:outputLabel value="#{channelReportController.netTotal}" style="float: left">
+                            <h:outputLabel value="Channel Net Total : &nbsp;" />
+                            <h:outputLabel value="#{channelReportController.netTotal}" >
                                 <f:convertNumber pattern="#,###,##0.00" />
                             </h:outputLabel>
                             
