--- a/src/main/webapp/channel/channel_report_monthly_all_vat.xhtml
+++ b/src/main/webapp/channel/channel_report_monthly_all_vat.xhtml
@@ -17,11 +17,11 @@
                 <p:panel header="Channel Vat Report Of months  ">
                     <h:panelGrid columns="2" >
                         <h:outputLabel value="From Date"/>
-                        <p:calendar styleClass="noPrintButton" value="#{channelReportTempController.fromDate}" pattern="dd MMMM yyyy hh:mm:ss a" >
+                        <p:calendar styleClass="noPrintButton" value="#{channelReportTempController.fromDate}" pattern="dd MMMM yyyy HH:mm:ss" >
 
                         </p:calendar>
                         <h:outputLabel value="To Date"/>
-                        <p:calendar styleClass="noPrintButton" value="#{channelReportTempController.toDate}" pattern="dd MMMM yyyy hh:mm:ss a" >
+                        <p:calendar styleClass="noPrintButton" value="#{channelReportTempController.toDate}" pattern="dd MMMM yyyy HH:mm:ss" >
 
                         </p:calendar>
                     </h:panelGrid>
