--- a/src/main/webapp/opd/patient_edit.xhtml
+++ b/src/main/webapp/opd/patient_edit.xhtml
@@ -130,6 +130,22 @@
                                             <p:inputText value="#{patientController.current.comments}" style="width: 100%;" class="form-control" />
                                         </div>
                                     </div>
+                                    <div class="row form-group">
+                                        <div class="col-md-6">
+                                            <p:outputLabel value="Patient Account:"  class="form-label" />
+                                            <p:selectBooleanButton value="#{patientController.current.hasAnAccount}"
+                                                                   offLabel="No Account"
+                                                                   onLabel="Has an account" ></p:selectBooleanButton>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <h:outputLabel class="form-label" value="Credit Limit"  />
+                                            <h:panelGroup>
+                                                <p:inputText autocomplete="off" id="txtCreditLimit"
+                                                             value="#{patientController.current.creditLimit}"
+                                                             class="form-control" />
+                                            </h:panelGroup>
+                                        </div>
+                                    </div>
                                 </div>
                             </p:panel>
 
