--- a/src/main/webapp/emr/patient.xhtml
+++ b/src/main/webapp/emr/patient.xhtml
@@ -133,6 +133,22 @@
                                     </div>
                                 </div>
                                 <div class="row form-group">
+                                    <div class="col-md-6">
+                                        <p:outputLabel value="Patient Account:"  class="form-label" />
+                                        <p:selectBooleanButton value="#{patientController.current.hasAnAccount}"
+                                                               offLabel="No Account"
+                                                               onLabel="Has an account" ></p:selectBooleanButton>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <h:outputLabel class="form-label" value="Credit Limit"  />
+                                        <h:panelGroup>
+                                            <p:inputText autocomplete="off" id="txtCreditLimit"
+                                                         value="#{patientController.current.creditLimit}"
+                                                         class="form-control" />
+                                        </h:panelGroup>
+                                    </div>
+                                </div>
+                                <div class="row form-group">
                                     <div class="col-md-12">
                                         <h:outputLabel value="Comments:"  class="form-label" />
                                         <h:inputText value="#{patientController.current.comments}" style="width: 100%;" class="form-control" />
