--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -247,7 +247,7 @@
                                             action="#{reportController.navigateToLabReportsTestCount()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="Collection Center Statement" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Turn Around Time Details" action="#{reportController.navigateToTurnAroundTimeDetails()}"/>
-                                        <p:commandButton   class="w-100"  ajax="false" value="Turn Around Time(Hourly)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Turn Around Time(Hourly)" action="#{reportController.navigateToTurnAroundTimeHourly()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="Peak Hour Statistics" action="#{reportController.navigateToLabPeakHourStatistics()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="Sample Carrier" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Organism Antibiotic Sensitivity" action="#{reportController.navigateToLabOrganismAntibioticSensitivityReport()}"/>
