--- a/src/main/webapp/reports/lab/peak_hour_statistics.xhtml
+++ b/src/main/webapp/reports/lab/peak_hour_statistics.xhtml
@@ -14,7 +14,7 @@
 
 
 
-                    <p:panel header="Investigation Wise Report" >
+                    <p:panel header="Peak Hour Statistic Report" >
                         <h:panelGrid columns="5" >
                             <p:outputLabel value="From (Billed) Date" >
                             </p:outputLabel>
