--- a/src/main/webapp/reports/lab/turn_around_time_hourly.xhtml
+++ b/src/main/webapp/reports/lab/turn_around_time_hourly.xhtml
@@ -9,7 +9,7 @@
         <ui:composition template="/reports/index.xhtml">
             <ui:define name="subcontent">
                 <h:form >
-                    <p:panel header="Test Counts" >
+                    <p:panel header="Turn Around Time (Hourly)" >
                         <h:panelGrid columns="2" >
                             <p:outputLabel value="Billing Institution/Branch" >
                             </p:outputLabel>
