--- a/src/main/webapp/opd/patient_edit.xhtml
+++ b/src/main/webapp/opd/patient_edit.xhtml
@@ -26,6 +26,9 @@
                                     <p:spacer width="10" />
                                     <p:commandButton value="Save" action="#{patientController.saveAndNavigateToOpdPatientProfile()}"
                                                      ajax="false" icon="pi pi-check" iconPos="right" styleClass="ui-button-warning" />
+                                    
+                                     <p:commandButton value="back" action="#{patientController.NotSaveAndNavigateToOpdPatientProfile()}"
+                                                      ajax="false" icon="pi pi-arrow-left" iconPos="right" class="mx-2" />
                                 </f:facet>
                                 <div class="container-fluid">
                                     <div class="row form-group">
