--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -253,7 +253,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="Organism Antibiotic Sensitivity" action="#{reportController.navigateToLabOrganismAntibioticSensitivityReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="Investigation Wise Research" action="#{reportController.navigateToLabInvetigationWiseReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="Annual Test Statistics" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="External Laboratary Work load" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="External Laboratary Work load" action="#{reportController.navigateToExternalLaborataryWorkloadReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="Investigation Month End Summary" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Lab Register" action="#{reportController.navigateToLabRegisterReport()}"/>
                                     </div>
