--- a/src/main/webapp/reports/lab/organism_antibiotic_sensitivity.xhtml
+++ b/src/main/webapp/reports/lab/organism_antibiotic_sensitivity.xhtml
@@ -82,7 +82,7 @@
                             </p:outputLabel>
                             <p:selectOneMenu value="#{reportController.referingDoctor}">
                                 <f:selectItem itemLabel="Select referring doctor"/>
-                                <f:selectItems value="#{doctorController.doctors}" itemLabel="#{d.name}" var="d" itemValue="#{d}"/>
+                                <f:selectItems value="#{doctorController.items}" itemLabel="#{d.name}" var="d" itemValue="#{d}"/>
                             </p:selectOneMenu>
 
                             <p:outputLabel value="Visiting Type"></p:outputLabel>
