--- a/src/main/webapp/reportCashier/report_doctor_payment_opd.xhtml
+++ b/src/main/webapp/reportCashier/report_doctor_payment_opd.xhtml
@@ -10,9 +10,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/reportCashier/report_cashier.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Doctor Payment" >
                         <p:panel>
