Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/lab/organism_antibiotic_sensitivity.xhtml
+++ b/src/main/webapp/reports/lab/organism_antibiotic_sensitivity.xhtml
@@ -120,7 +120,7 @@
                                 value="" 
                                 filter="true"
                                 >
-                                <f:selectItem itemLabel="Select Sensitivity"></f:selectItem>
+                                <f:selectItems  value="#{}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
 
                             </p:selectOneMenu>
 
