Closes Issue#1396 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -273,7 +273,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="9. Surgery Count(Surgery Wise)" />
                                         <p:commandButton   class="w-100"  ajax="false" value="10. Surgery Count(Doctor Wise)" />
                                         <p:commandButton   class="w-100"  ajax="false" value="11. Surgery Count(Type)" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="12. Admission Count(Consultant Wise)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="12. Admission Count(Consultant Wise)" action="#{reportController.navigateToManagementAdmissionCountReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="13. Admission Count(Payment Type Wise)" />
                                         <p:commandButton   class="w-100"  ajax="false" value="11. Hospital Census" />
                                         <p:commandButton   class="w-100"  ajax="false" value="12. Room Occupancy" />
