--- a/src/main/webapp/reports/lab/organism_antibiotic_sensitivity.xhtml
+++ b/src/main/webapp/reports/lab/organism_antibiotic_sensitivity.xhtml
@@ -120,7 +120,7 @@
                                 value="" 
                                 filter="true"
                                 >
-                                <f:selectItems  value="#{}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                <f:selectItems  value="" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
 
                             </p:selectOneMenu>
 
