--- a/src/main/webapp/opd/patient_search.xhtml
+++ b/src/main/webapp/opd/patient_search.xhtml
@@ -164,6 +164,13 @@
                                                         <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                     </p:commandButton>
 
+                                                    <p:commandButton value="Receive Deposits"
+                                                                     action="#{patientController.navigateToReceiveDepositsFromPatientProfile()}"
+                                                                     ajax="false"
+                                                                     styleClass="mx-1 mb-2">
+                                                        <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
+                                                    </p:commandButton>
+
                                                 </div>
                                             </div>
                                         </p:column>
